#3891 Add support for `not equals` `!=` term condition